fixed about page borders and spacing

--- a/css/index.css
+++ b/css/index.css
@@ -56,10 +56,37 @@ html, body {
     font-family: 'Roboto', sans-serif;
 }
 
+
 h1, h2, h3, h4, h5 {
     font-size: 18px;
     margin-bottom: 15px;
     font-family: 'Rubik', sans-serif;
+}
+
+header {
+    margin: 1%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.headyimage {
+    margin: 2%;
+
+}
+
+.navcontainer {
+    margin-left: 2%;
+    display: flex;
+    justify-content: center;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.navcontainer a {
+    color: black;
+    text-decoration: none;
+    padding: 30px;
 }
 
 p {
@@ -143,4 +170,211 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+}
+
+.box1 {
+    background-color: teal;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 12.5%;
+    height: 100px;
+
+}
+
+.box2 {
+    background-color: gold;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 12.5%;
+    height: 100px;
+}
+
+.box3 {
+    background-color: cadetblue;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 12.5%;
+    height: 100px;
+    
+}
+
+.box4 {
+    background-color: coral;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 12.5%;
+    height: 100px;
+}
+
+.box5 {
+    background-color: crimson;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 12.5%;
+    height: 100px;
+}
+
+.box6 {
+    background-color: forestgreen;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 12.5%;
+    height: 100px;
+}
+
+.box7 {
+    background-color: darkorchid;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 12.5%;
+    height: 100px;
+}
+
+.box8 {
+    background-color: hotpink;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 12.5%;
+    height: 100px;
+}
+
+.box9 {
+    background-color: indigo;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 12.5%;
+    height: 100px;
+}
+
+.box10 {
+    background-color: dodgerblue;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 12.5%;
+    height: 100px;
+}
+
+.container-about-page {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: space-between;
+}
+
+.abouttext {
+    margin-top: 2%;
+    margin-bottom: 3%;
+}
+
+hr {
+    border: 1px dashed black;
+}
+
+.strategy {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin-right: 2%;
+    border-bottom: 1px dashed black;
+    
+}
+
+.strategy img {
+    margin-bottom: 3%;
+}
+
+.working {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin-left: 2%;
+    border-bottom: 1px dashed black;
+}
+
+.working img {
+    margin-bottom: 3%;
+}
+
+.office {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin-right: 2%;
+    border-bottom: 1px dashed black;
+}
+
+.office img {
+    margin-bottom: 3%;
+}
+
+.meeting {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin-left: 2%;
+    border-bottom: 1px dashed black;
+}
+
+.meeting img {
+    margin-bottom: 3%;
+}
+
+.tophalf {
+    display: flex;
+    flex-wrap: nowrap;
+    margin: 2%;
+}
+
+.bottomhalf {
+    display: flex;
+    flex-wrap: nowrap;
+    margin: 2%;
+}
+
+.bottomtext {
+    margin: 4%;
+}
+
+button {
+    background-color: white;
+    border: solid black 2px;
+    border-radius: 10px;
+    padding: 8px 20px;
+    width: 35%;
+    margin-top: 3%;
+    margin-bottom: 5%;
 }
